fix(feature-card): ensure aligned to grid line  (#4751)
### Related Ticket(s)

Refs #4174.

### Description

Changes style of feature card to ensure it's aligned to grid line without gutter.

The style of feature card used to have adjustments (e.g. by negative margin) to adjust for its surrounding grid gutter, which is removed with this change.

### Changelog

**New**

- Simplified Carbon grid style for stories.

**Changed**

- Fixed feature card to ensure it's aligned to grid line (without gutter).

**Removed**

- Style adjustments in feature card (e.g. by negative margin) to adjust for its surrounding grid gutter.

--- a/packages/styles/scss/components/feature-card/_feature-card.scss
+++ b/packages/styles/scss/components/feature-card/_feature-card.scss
@@ -25,8 +25,6 @@
 
   @include carbon--breakpoint('md') {
     flex-direction: row;
-
-    @include hang;
   }
 
   &:focus {
@@ -40,6 +38,30 @@
 }
 
 @mixin feature-card {
+  .#{$prefix}--feature-card {
+    @include carbon--breakpoint-down('md') {
+      @include carbon--make-row;
+    }
+
+    @include carbon--breakpoint('md') {
+      .#{$prefix}--card {
+        @include hang;
+      }
+    }
+
+    @include carbon--breakpoint('lg') {
+      margin-right: $spacing-05;
+      margin-left: $spacing-05;
+    }
+  }
+
+  :host(#{$dds-prefix}-feature-card),
+  :host(#{$dds-prefix}-feature-cta) {
+    @include carbon--breakpoint-down('md') {
+      display: flex;
+    }
+  }
+
   .#{$prefix}--feature-card,
   :host(#{$dds-prefix}-feature-card),
   :host(#{$dds-prefix}-feature-cta) {
@@ -47,13 +69,6 @@
 
     @include carbon--breakpoint-down('md') {
       padding-top: aspect-ratio(1, 1);
-
-      @include carbon--make-row;
-    }
-
-    @include carbon--breakpoint('lg') {
-      margin-right: $spacing-05;
-      margin-left: $spacing-05;
     }
 
     .#{$prefix}--feature-card__card .#{$prefix}--card__footer {
